# opentelemetry-rust

./: Cargo.toml
examples/aws/: Cargo.toml
examples/aws/src/: client.rs  server.rs
opentelemetry-aws/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-aws/src/: id.rs  lib.rs
opentelemetry-aws/src/format/: mod.rs
opentelemetry-aws/src/propagation/: http_propagator.rs  mod.rs
opentelemetry-aws/src/service/: mod.rs  xray.rs
