[package]
name = "aws"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the http server
name = "aws-server"
path = "src/server.rs"

[[bin]] # Bin to run the client
name = "aws-client"
path = "src/client.rs"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
opentelemetry = { path = "../../" }
opentelemetry-aws = { path = "../../opentelemetry-aws" }
